Add code-splitting & dynamic imports (component level).

--- a/src/components/Views/About/About.scss
+++ b/src/components/Views/About/About.scss
@@ -1,7 +1,7 @@
 
-/* -------  Home  ------- */
+/* -------  About  ------- */
 
 .container {
-  background: darkslateblue;
+  background: darkslategrey;
   composes: examplePage from 'sass/_classes.scss';
 }
