--- a/src/components/Views/Contact/Contact.scss
+++ b/src/components/Views/Contact/Contact.scss
@@ -1,7 +1,7 @@
 
-/* -------  Home  ------- */
+/* -------  Contact  ------- */
 
 .container {
-  background: darkslateblue;
+  background: darkblue;
   composes: examplePage from 'sass/_classes.scss';
 }
