--- a/src/components/Base/Header/Header.scss
+++ b/src/components/Base/Header/Header.scss
@@ -3,6 +3,33 @@
 
 .container {
   z-index: 99;
-  width: 100%;
-  background: $white;
+  padding: 0 2%;
+  background: $coolwhite;
+  @include size(100%, 5em);
+  composes: flexySpaceBetween from 'sass/_classes.scss';
+}
+
+.nav {
+  flex: 1;
+}
+
+.navList {
+  composes: flexyJustifyEnd from 'sass/_classes.scss';
+}
+
+.navItem {
+  margin: 0 2.5%;
+}
+.navLink {
+  &::after {
+    content: '';
+    display: block;
+    background: $black;
+    opacity: 0;
+    transition: opacity $ease_44;
+    @include size(100%, 1px);
+  }
+  &:hover::after {
+    opacity: 1;
+  }
 }
