--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,6 +3,7 @@
 
 $white: #ffffff;
 $offwhite: #f5f5f5;
+$coolwhite: #f9f9f9;
 $grey1: #e0e0e0;
 $grey2: #d3d3d3;
 $grey3: #9b9b9b;
@@ -21,3 +22,14 @@ $mq_medium: 667px;
 $mq_large: 999px;
 $mq_xlarge: 1331px;
 $mq_xxlarge: 1663px;
+
+/* ---  easing timings  ---- */
+$ease_11: 0.11s;
+$ease_22: 0.22s;
+$ease_33: 0.33s;
+$ease_44: 0.44s;
+$ease_55: 0.55s;
+$ease_66: 0.66s;
+$ease_77: 0.77s;
+$ease_88: 0.88s;
+$ease_99: 0.99s;
