--- a/src/components/Views/Contact/Contact.scss
+++ b/src/components/Views/Contact/Contact.scss
@@ -3,5 +3,5 @@
 
 .container {
   background: darkblue;
-  composes: examplePage from 'sass/_classes.scss';
+  composes: examplePage from 'styles/_classes.scss';
 }
