--- a/src/components/Views/NotFound/NotFound.scss
+++ b/src/components/Views/NotFound/NotFound.scss
@@ -2,7 +2,7 @@
 /* -------  NotFound  ------- */
 
 .container {
-  composes: fullSize flexyCentered from 'sass/_classes.scss'
+  composes: fullSize flexyCentered from 'styles/_classes.scss'
 }
 
 .text {
